[package]
name = "todot"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Victor Garcia Fernandez"]
description = "A todo list manager for the terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.100"
ratatui = { version = "0.21.0", features = ["all-widgets"] }
crossterm = "0.26.1"
serde = { version = "1.0.171", features = ["derive"] }
directories = "5.0.1"
